remove .contentlayer[content]

--- a/md/links.mdx
+++ b/md/links.mdx
@@ -5,6 +5,14 @@ date: 2025-02-02
 
 # **Links**
 
-[Repository](https://github.com/ilkhoeri/cretex)
-[Documentation](https://oeri.vercel.app)
-[Changelog](./CHANGELOG.md)
+[![Cretex CI status](https://github.com/ilkhoeri/cretex/actions/workflows/test.yml/badge.svg?event=push&branch=main)](https://github.com/ilkhoeri/cretex/actions?query=branch%3Amain)
+
+[![License](https://img.shields.io/github/license/ilkhoeri/cretex)](https://opensource.org/licenses/MIT)
+
+[![Repository](https://img.shields.io/badge/created%20by-@ilkhoeri-4bbaab.svg?logo=github)](https://github.com/ilkhoeri/cretex)
+
+[![Issues](https://img.shields.io/badge/Issues-red.svg?label=%F0%9F%90%9E)](https://github.com/ilkhoeri/cretex/issues/new)
+
+[![Changelog](https://img.shields.io/badge/Changelog-green.svg?label=%F0%9F%93%91)](/changelog)
+
+[![UI by ilkhoeri](https://img.shields.io/badge/@ilkhoeri-4bbaab.svg?label=%E2%9C%A8%20UI%20by)](https://oeri.vercel.app)
