--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -7,9 +7,9 @@ date: 2025-02-03
 
 ---
 
-- [**Introduction**](/#introduction)
-  - [Installation](/#installation)
-    - [Requirements](/#requirements)
+- [**Introduction**](/started#introduction)
+- [Installation](/installation#installation)
+  - [Requirements](/installation#requirements)
 - [**cnx**](/cnx)
   - [Syntax](/cnx#syntax)
   - [How `cnx` works:](/cnx#how-cnx-works)
