--- a/md/index.mdx
+++ b/md/index.mdx
@@ -1,55 +1,103 @@
 ---
-title: Home
+title: Cretex - The Ultimate Utility for Dynamic Data Management
 date: 2025-02-03
 ---
 
-# **Introduction**
+<p align="center">
+  <img src="cretex-logo.svg" width="200px" align="center" alt="Cretex logo" />
+  <h1 align="center">Cretex</h1>
+</p>
 
-Cretex is function is very useful for building style configurations, API Response Combination, Complex API Serialization or other properties dynamically by simplifying flexible management based on runtime conditions.
+<br />
+
+# **Welcome to Cretex**
+
+**Cretex** is a powerful and flexible utility designed to simplify dynamic data management. Whether you're working with **API responses**, **complex serialization**, **dynamic styles**, or **structured data merging**, Cretex provides an efficient and elegant solution.
+
+Built with performance and scalability in mind, Cretex supports **ESM**, **CJS**, and **modern JavaScript environments**, making it highly versatile for both **frontend and backend** applications.
 
 ---
 
-> Dynamically utility for combining different types of values ​​into a single value.
+## **Why Cretex?**
+
+Modern applications require a highly flexible and efficient way to handle structured data dynamically. Cretex is designed to address these challenges with:
+
+- **Efficient API Response Handling** - Combine, clean, and structure API responses seamlessly.
+- **Advanced Data Serialization** - Process deeply nested objects without complexity.
+- **Dynamic Style Management** - Merge conditional styles with ease, similar to `clsx` and `cva`, but more powerful.
+- **Smart Object Merging** - Preserve important values while ensuring flexibility in updates.
+- **Optimized Performance** - Built-in cycle detection prevents infinite loops, and optimized processing ensures minimal overhead.
+- **Seamless TypeScript Support** - Fully typed for enhanced developer experience.
 
 ---
 
-You can find `cretex` in:
+## **Core Features**
 
-[![NPM](https://img.shields.io/npm/v/cretex.svg?logo=npm&logoColor=white&labelColor=cc3534)](https://www.npmjs.com/package/cretex)
-[![JSR](https://jsr.io/badges/@cretex/dynamic?label=jsr)](https://jsr.io/@cretex/dynamic)
-[![DENO](https://img.shields.io/npm/v/cretex.svg?logo=deno&logoColor=white&logoSize=auto&label=%20deno&labelColor=blue&color=white)](https://deno.land/x/cretex)
-[![jsdelivr](https://img.shields.io/npm/v/cretex.svg?logo=jsdelivr&label=jsdelivr&color=fdC72e)](https://www.jsdelivr.com/package/npm/cretex)
+### **🔹 ocx - Object Combination with Chaining**
 
-## Installation
+Cretex provides a powerful object merging utility with a **chaining mechanism** for advanced configurations.
 
-### Requirements
+```ts
+function ocx<T extends ocxKey>(...obj: ocxObj<T>[]): ocxAcc<T>;
+```
 
-- TypeScript `4.5+!`
-- You must enable `strict` mode in your `tsconfig.json`. This is a best practice for all TypeScript projects.
+### **🔹 clean - Deep Cleaning of Objects**
 
-  ```ts
-  // tsconfig.json
-  {
-    // ...
-    "compilerOptions": {
-      // ...
-      "strict": true
-    }
-  }
-  ```
+Removes falsy values, empty objects, and unnecessary data while maintaining control over exclusions.
+
+```ts
+function clean<T extends ocxKey>(obj: T, exclude?: unknown[]): T;
+```
+
+### **🔹 cnx - Dynamic String Management**
+
+A simplified and powerful alternative to `clsx` that supports all argument types, including functions.
+
+```ts
+function cnx(...inputs: cnxValues[]): string;
+```
+
+### **🔹 cvx - Variance Handling Management**
+
+A flexible variant handling utility similar to `cva`, but with a more intuitive syntax.
+
+```ts
+function cvx<T extends cvxKeys>(keys: cvxRecord<T>): (result?: cvxResult<T>) => string;
+```
+
+---
+
+## **Getting Started**
+
+To start using Cretex, follow the [installation guide](./installation) and explore the documentation to learn about its powerful features.
 
 ```bash
 npm install cretex
 ```
 
-using [cdn](https://www.jsdelivr.com/package/npm/cretex)
+For detailed API references and real-world examples, visit the [Documentation](./started).
 
-```html
-<!-- default -->
-<script src="https://cdn.jsdelivr.net/npm/cretex@0.0.3/lib/index.min.js"></script>
+---
 
-<!-- esm -->
-<script type="module">
-  import cretex from https://cdn.jsdelivr.net/npm/cretex@0.0.3/+esm
-</script>
-```
+## **Built for Modern Development**
+
+Cretex is compiled with **ES2020**, **ESNext**, and **DOM** support, making it suitable for modern JavaScript and TypeScript applications. It works seamlessly in:
+
+- **Node.js** (CJS & ESM support)
+- **Browser environments** (via CDN or bundlers)
+- **Deno & Bun**
+- **Frontend frameworks** (React, Vue, Svelte, etc.)
+- **Backend APIs** (Express, Fastify, Koa, etc.)
+
+---
+
+## **Join the Community**
+
+Cretex is an **open-source** project, and we encourage contributions from the community! Join the discussion, contribute to the codebase, or share your feedback:
+
+- 🌐 [GitHub Repository](https://github.com/ilkhoeri/cretex)
+- 💬 [Discussions](https://github.com/ilkhoeri/cretex/discussions)
+- 🐦 [Twitter](https://twitter.com/ilkhoeri)
+- 📦 [NPM Package](https://www.npmjs.com/package/cretex)
+
+Together, let's make data management more **efficient**, **clean**, and **powerful**. 🚀
