--- a/md/started.mdx
+++ b/md/started.mdx
@@ -5,10 +5,9 @@ date: 2025-02-03
 
 # **Getting Started**
 
-<p align="center">
-  <img src="cretex-logo.svg" width="200px" align="center" alt="Cretex logo" />
-  <h1 align="center">Cretex</h1>
-</p>
+<div align="center">
+  <img src="/cretex-logo.svg" width="200px" align="center" alt="Cretex logo" />
+</div>
 
 <br />
 
@@ -43,21 +42,21 @@ Cretex is an **open-source, community-driven** utility. It is built with extensi
 
 ## **Why Use Cretex?**
 
-### 🚀 **Versatile & Dynamic**
+### **🚀 Versatile & Dynamic**
 
 Cretex is designed to work in multiple scenarios, including API data transformation, UI styling, and configuration management. Its dynamic chaining and flexible input handling make it a valuable tool for any development workflow.
 
-### 🔄 **Optimized & Efficient**
+### **🔄 Optimized & Efficient**
 
 By automatically filtering out unwanted values and merging data intelligently, Cretex reduces unnecessary computations and improves performance, ensuring that only meaningful values are retained.
 
-### 🌐 **Universal Compatibility**
+### **🌐 Universal Compatibility**
 
 - **Supports both frontend & backend development** – Cretex can be used in any JavaScript or TypeScript environment, including Node.js, Next.js, React, and more.
 - **Compatible with various module systems** – Cretex supports **ESM (ECMAScript Modules)** and **CJS (CommonJS)**, making it easy to integrate into modern and legacy projects.
 - **Optimized for modern JavaScript** – Compiled with `"lib": ["ES2020", "es5", "es6", "es7", "esnext", "dom"]` and targeting **ES2018**, ensuring broad compatibility without sacrificing modern optimizations.
 
-### 🔧 **Simple API, Powerful Features**
+### **🔧 Simple API, Powerful Features**
 
 Cretex offers a concise API that is easy to use while maintaining the flexibility to handle **deep object structures, nested arrays, and function-based value resolution**. Its intuitive design allows developers to manage data dynamically without unnecessary complexity.
 
