--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -1,34 +1,33 @@
 ---
 title: Table of Contents
-date: 2025-02-03
+date: 2025-02-05
 ---
 
 # Table of Contents
 
 ---
 
-- [**Introduction**](/started#introduction)
-- [Installation](/installation#installation)
+- [**Getting Started**](/started#getting-started)
+  - [Introduction](/started#introduction)
+    - [What Cretex can do](/started#what-cretex-can-do)
+    - [How Can Cretex Help You?](/started#how-can-cretex-help-you)
+  - [Why Use Cretex?](/started#why-use-cretex)
+    - [Versatile & Dynamic](/started#-versatile-dynamic)
+    - [Optimized & Efficient](/started#-optimized-efficient)
+    - [Universal Compatibility](/started#-universal-compatibility)
+    - [Simple API, Powerful Features](/started#-simple-api-powerful-features)
+  - [Core Features](/started#core-features)
+    - [Cretex Built for Modern Development](/started#cretex-built-for-modern-development)
+- [**Installation**](/installation#installation)
   - [Requirements](/installation#requirements)
-- [**cnx**](/cnx)
-  - [Syntax](/cnx#syntax)
-  - [How `cnx` works:](/cnx#how-cnx-works)
-  - [Example Usage](/cnx#example-usage)
-    - [Basic Merging](/cnx#basic-merging)
-    - [Complex Merging](/cnx#complex-merging)
-    - [Ignored Falsy](/cnx#ignored-falsy)
-  - [Advantages](/cnx#advantages)
-  - [Merge class tailwind-merge](/cnx#merge-class-tailwind-merge)
-  - [IntelliSense](/cnx#intellisense)
-- [**cvx**](/cvx)
-  - [Syntax](/cvx#syntax)
-  - [How `cvx` works:](/cvx#how-cvx-works)
-  - [Example Usage](/cvx#example-usage)
-  - [Advantages](/cvx#advantages)
-  - [IntelliSense](/cvx#intellisense)
-- [**ocx**](/ocx)
-  - [Syntax](/ocx#syntax-2)
-  - [How `ocx` works:](/ocx#how-ocx-works)
+    - [TypeScript Configuration](/installation#typescript-configuration)
+  - [Install via Package Managers](/installation#install-via-package-managers)
+  - [Using a CDN](/installation#using-a-cdn)
+    - [UMD (Global Script)](/installation#umd-global-script)
+    - [ESM (Module Import)](/installation#esm-module-import)
+- [**ocx**](/ocx#ocx)
+  - [Syntax](/ocx#syntax)
+  - [How ocx works](/ocx#how-ocx-works)
   - [Example Usage](/ocx#example-usage)
     - [Merging Objects](/ocx#merging-objects)
   - [Real-World Examples](/ocx#real-world-examples)
@@ -36,18 +35,34 @@ date: 2025-02-03
     - [Complex API Response Combination with additional data](/ocx#complex-api-response-combination-with-additional-data)
     - [Complex Merging of Nested and Dynamic Data](/ocx#complex-merging-of-nested-and-dynamic-data)
     - [Complex API Serialization Example](/ocx#complex-api-serialization-example)
-  - [Handling `Symbol` Keys in `ocx`](/ocx#handling-symbol-keys-in-ocx)
-    - [Why Use `Symbol`?](/ocx#why-use-symbol)
-    - [Example Usage with `Symbol`](/ocx#example-usage-with-symbol)
-      - [1. `Symbol` as Object Keys](/ocx#1-symbol-as-object-keys)
-      - [2. Merging Objects with `Symbol`](/ocx#2-merging-objects-with-symbol)
-      - [3. Deep Merging with `Symbol`](/ocx#3-deep-merging-with-symbol)
-      - [4. `Symbol` in Nested Objects](/ocx#4-symbol-in-nested-objects)
-      - [5. `Symbol` in Node.js (`util.inspect.custom`)](/ocx#5-symbol-in-nodejs-utilinspectcustom)
+  - [Handling Symbol Keys in ocx](/ocx#handling-symbol-keys-in-ocx)
+    - [Why Use Symbol?](/ocx#why-use-symbol)
+    - [Example Usage with Symbol](/ocx#example-usage-with-symbol)
+      - [1. Symbol as Object Keys](/ocx#1-symbol-as-object-keys)
+      - [2. Merging Objects with Symbol](/ocx#2-merging-objects-with-symbol)
+      - [3. Deep Merging with Symbol](/ocx#3-deep-merging-with-symbol)
+      - [4. Symbol in Nested Objects](/ocx#4-symbol-in-nested-objects)
+      - [5. Symbol in Node.js (util.inspect.custom)](/ocx#5-symbol-in-nodejs-utilinspectcustom)
   - [Advantages](/ocx#advantages)
-- [**clean**](/clean)
+- [**cvx**](/cvx#cvx)
+  - [Syntax](/cvx#syntax)
+  - [How cvx works](/cvx#how-cvx-works)
+  - [Example Usage](/cvx#example-usage)
+  - [Advantages](/cvx#advantages)
+  - [IntelliSense](/cvx#intellisense)
+- [**cnx**](/cnx#cnx)
+  - [Syntax](/cnx#syntax)
+  - [How cnx works](/cnx#how-cnx-works)
+  - [Example Usage](/cnx#example-usage)
+    - [Basic Merging](/cnx#basic-merging)
+    - [Complex Merging](/cnx#complex-merging)
+    - [Ignored Falsy](/cnx#ignored-falsy)
+  - [Advantages](/cnx#advantages)
+  - [Merge class tailwind-merge](/cnx#merge-class-tailwind-merge)
+  - [IntelliSense](/cnx#intellisense)
+- [**clean**](/clean#clean)
   - [Syntax](/clean#syntax)
-    - [How `clean()` Works](/clean#how-clean-works)
+    - [How clean Works](/clean#how-clean-works)
   - [Example Usage](/clean#example-usage)
     - [Removing Falsy Values from an Object](/clean#removing-falsy-values-from-an-object)
     - [Removing Falsy Values from Arrays](/clean#removing-falsy-values-from-arrays)
@@ -56,12 +71,51 @@ date: 2025-02-03
     - [Cleaning Arrays](/clean#cleaning-arrays)
     - [Excluding Specific Values](/clean#excluding-specific-values)
   - [Advantages](/clean#advantages)
-- [**Exported**](/exported)
+- [**Types**](/types#types)
+  - [InferType](/types#infertype)
+    - [Syntax](/types#syntax)
+    - [How inferType Works](/types#how-infertype-works)
+    - [Example Usage](/types#example-usage)
+    - [When to Use inferType](/types#when-to-use-infertype)
+- [**Exported**](/exported#exported)
   - [Using Named and Default Exports Together](/exported#using-named-and-default-exports-together)
-  - [**For ES Modules Users**](/exported#for-es-modules-users)
-  - [**For CommonJS Users**](/exported#for-commonjs-users)
-  - [**How We Recommend Using This Library**](/exported#how-we-recommend-using-this-library)
-  - [**Targeting ES2020**](/exported#targeting-es2020)
-- [**Links**](#links)
-- [**License**](#license)
-- [**Others**](#others)
+  - [For ES Modules Users](/exported#for-es-modules-users)
+  - [For CommonJS Users](/exported#for-commonjs-users)
+  - [How We Recommend Using This Library](/exported#how-we-recommend-using-this-library)
+  - [Targeting ES2020](/exported#targeting-es2020)
+- [**License**](/license#license)
+- [**CHANGELOG**](/changelog#changelog)
+  - [v0.0.45](/changelog#0045---2025-02-04)
+    - [Enhancements](/changelog#enhancements)
+    - [Documentation](/changelog#documentation)
+    - [Summary](/changelog#summary)
+  - [v0.0.4](/changelog#004---2025-01-31)
+    - [Changed](/changelog#changed)
+      - [Refactored](/changelog#refactored)
+    - [Removed](/changelog#removed)
+  - [v0.0.3](/changelog#003---2025-01-29)
+    - [Changed](/changelog#changed)
+  - [v0.0.2](/changelog#002---2025-01-29)
+    - [Added](/changelog#added)
+    - [Changed](/changelog#changed)
+    - [Removed](/changelog#removed)
+  - [v0.0.1](/changelog#001---2025-01-25)
+    - [Added](/changelog#added)
+    - [Changed](/changelog#changed)
+    - [Fixed](/changelog#fixed)
+  - [v0.0.0](/changelog#000---2025-01-23)
+    - [Added](/changelog#added)
+    - [Changed](/changelog#changed)
+- [**Contributor Covenant Code of Conduct**](/coc#contributor-covenant-code-of-conduct)
+  - [Our Pledge](/coc#our-pledge)
+  - [Our Standards](/coc#our-standards)
+  - [Scope](/coc#scope)
+  - [Enforcement](/coc#enforcement)
+  - [Enforcement Guidelines](/coc#enforcement-guidelines)
+    - [1. Correction](/coc#1-correction)
+    - [2. Warning](/coc#2-warning)
+    - [3. Temporary Ban](/coc#3-temporary-ban)
+    - [4. Permanent Ban](/coc#4-permanent-ban)
+  - [Attribution](/coc#attribution)
+  - [Our Vision](/coc#our-vision)
+- [**Links**](/links#links)
