--- a/md/coc.mdx
+++ b/md/coc.mdx
@@ -1,6 +1,6 @@
 ---
-title: Code of conduct
-date: 2025-02-03
+title: Code of Conduct
+date: 2025-02-05
 ---
 
 # Contributor Covenant Code of Conduct
