--- a/md/started.mdx
+++ b/md/started.mdx
@@ -6,7 +6,7 @@ date: 2025-02-03
 # **Getting Started**
 
 <div align="center">
-  <img src="/cretex-logo.svg" width="200px" align="center" alt="Cretex logo" />
+  <img src="https://raw.githubusercontent.com/ilkhoeri/cretex/c49a661ab84bf2f9cdf4fed2d2f4016361135362/logo.svg" width="200px" align="center" alt="Cretex logo" />
 </div>
 
 <br />
