replace `useCookies` with `useConfig`

--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -10,8 +10,8 @@ date: 2025-02-05
 - [**Getting Started**](/started#getting-started)
   - [Introduction](/started#introduction)
     - [What Cretex can do](/started#what-cretex-can-do)
-    - [How Can Cretex Help You?](/started#how-can-cretex-help-you)
-  - [Why Use Cretex?](/started#why-use-cretex)
+    - [How Can Cretex Help You](/started#how-can-cretex-help-you)
+  - [Why Use Cretex](/started#why-use-cretex)
     - [Versatile & Dynamic](/started#-versatile-dynamic)
     - [Optimized & Efficient](/started#-optimized-efficient)
     - [Universal Compatibility](/started#-universal-compatibility)
@@ -36,7 +36,7 @@ date: 2025-02-05
     - [Complex Merging of Nested and Dynamic Data](/ocx#complex-merging-of-nested-and-dynamic-data)
     - [Complex API Serialization Example](/ocx#complex-api-serialization-example)
   - [Handling Symbol Keys in ocx](/ocx#handling-symbol-keys-in-ocx)
-    - [Why Use Symbol?](/ocx#why-use-symbol)
+    - [Why Use Symbol](/ocx#why-use-symbol)
     - [Example Usage with Symbol](/ocx#example-usage-with-symbol)
       - [1. Symbol as Object Keys](/ocx#1-symbol-as-object-keys)
       - [2. Merging Objects with Symbol](/ocx#2-merging-objects-with-symbol)
