--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -77,6 +77,12 @@ date: 2025-02-05
     - [How inferType Works](/types#how-infertype-works)
     - [Example Usage](/types#example-usage)
     - [When to Use inferType](/types#when-to-use-infertype)
+- [**Meta**](/meta#meta)
+  - [Documentation](/meta#documentation)
+  - [Repository](/meta#repository)
+  - [Installation](/meta#installation)
+  - [Bundles](/meta#bundles)
+  - [Score and Test](/meta#score-and-test)
 - [**Exported**](/exported#exported)
   - [Using Named and Default Exports Together](/exported#using-named-and-default-exports-together)
   - [For ES Modules Users](/exported#for-es-modules-users)
